fix: resolved recorder fixture, assertNoRawTeamLabels helper, .toList(), immutable stats via Stream reduce, dead param, changelog wording, parameterized invalid teams